Slack notification target; refactoring